# fenet-soroban-settlement-poc

./: .gitignore  Cargo.toml  README.md  TASK.md
.github/workflows/: release.yml
contracts/market/: Cargo.toml
contracts/market/src/: lib.rs  test.rs
contracts/market/test_snapshots/test/: merge_after_resolution_reverts.1.json  merge_more_than_held_reverts.1.json  mint_negative_reverts.1.json  mint_then_merge_round_trip.1.json  partial_redeem.1.json  resolve_no_then_redeem.1.json  resolve_yes_then_redeem.1.json  set_outcome_requires_admin_auth.1.json  set_outcome_twice_reverts.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
scripts/: deploy.sh
